fix layout of brand in navbar when text wraps

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -26,16 +26,22 @@ body {
   padding-left: 1rem;
 }
 
-.navbar-brand .navbar-item:first-child,
-.navbar-brand .navbar-item:first-child a {
+.navbar-brand .navbar-item:first-child {
   align-self: center;
   padding: 0;
   color: var(--navbar-font-color);
   font-size: calc(22 / var(--rem-base) * 1rem);
+  flex-wrap: wrap;
+  line-height: 1;
 }
 
-.navbar-brand .separator {
-  padding: 0 0.375rem;
+.navbar-brand .navbar-item:first-child a {
+  color: inherit;
+  word-wrap: normal;
+}
+
+.navbar-brand .navbar-item:first-child :not(:last-child) {
+  padding-right: 0.375rem;
 }
 
 .navbar-burger {
